# cpp-practice-collection

./: .gitignore
address-book-system/: CMakeLists.txt
address-book-system/include/: contact.h
address-book-system/src/: contact.cpp  main.cpp
function/include/: function.h
function/src/: function.cpp  main.cpp
staff-management-system/include/: boss.h  employee.h  manager.h  staff.h  staffManagement.h
staff-management-system/src/: main.cpp  staffManager.cpp
